Fix custom selector align of text to right

--- a/framework/skins/default/custom.scss
+++ b/framework/skins/default/custom.scss
@@ -17,8 +17,9 @@ input.customized {
 }
 
 select.customized {
+	appearance: none;
 	background: transparent;
-	text-align: right;
+	direction: rtl;
 }
 
 ul.actions>li {
